--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1617,737
+ViewportPos=1089,1182
 ViewportId=0xE927CF2F
 Size=927,748
 Collapsed=0
@@ -37,6 +37,11 @@ Collapsed=0
 [Window][Test]
 Pos=60,60
 Size=132,165
+Collapsed=0
+
+[Window][Settings]
+Pos=60,60
+Size=124,54
 Collapsed=0
 
 [Docking][Data]
