--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -5,9 +5,9 @@ Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=0,19
-Size=1280,351
+Size=635,360
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000006,0
 
 [Window][Example: Log]
 Pos=0,581
@@ -41,15 +41,23 @@ Size=132,165
 Collapsed=0
 
 [Window][Settings]
-Pos=0,372
-Size=1280,348
+Pos=0,381
+Size=1280,339
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Viewport]
+ViewportPos=1532,408
+ViewportId=0x995B0CF8
+Size=1499,1207
+Collapsed=0
+
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=475,510 Size=1280,701 Split=Y
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,351 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=449,2009 Selected=0xCB707B69
-    DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=3389,2009 CentralNode=1 Selected=0xE927CF2F
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,348 Selected=0x1C33C293
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=77,304 Size=1280,701 Split=Y
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1280,360 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=449,2009 Selected=0xCB707B69
+    DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=3389,2009 Split=X Selected=0x995B0CF8
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=635,360 Selected=0xE927CF2F
+      DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=643,360 CentralNode=1 Selected=0x995B0CF8
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=1280,339 Selected=0x1C33C293
 
